--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "website",
-  "homepage": "http://lizapressman.github.io/reactwebsite",
   "version": "0.1.0",
   "private": true,
+  "homepage": "http://lpressma.github.io/website"
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
