--- a/package.json
+++ b/package.json
@@ -11,9 +11,12 @@
     "react": "^16.13.1",
     "react-bootstrap": "^1.0.1",
     "react-dom": "^16.13.1",
+    "react-images": "^1.1.7",
+    "react-photo-gallery": "^8.0.0",
     "react-scripts": "^3.4.1",
     "react-skillbars": "^1.6.1",
-    "typescript": "^3.9.6"
+    "typescript": "^3.9.6",
+    "yarn": "^1.22.4"
   },
   "scripts": {
     "start": "PUBLIC_URL=/ react-scripts start",
